@@ -17,8 +17,9 @@
 /*
  * @test
  * @summary regression test on JRE-624 CThreading.isAppKit() fails to detect main app thread if it was renamed
- * @compile -XDignore.symbol.file IsAppKit.java
- * @run main/othervm IsAppKit 
+ * @compile -XDignore.symbol.file --add-exports java.desktop/sun.lwawt.macosx=ALL-UNNAMED IsAppKit.java
+ * @requires os.family == "mac"
+ * @run main/othervm --add-opens java.desktop/sun.lwawt.macosx=ALL-UNNAMED IsAppKit
  */
 
 import javax.swing.*;
